objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Apttus__SendToTeamReview__c</fullName>
        <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c, &quot;In Signatures&quot;),(ISPICKVAL(Apttus__Status_Category__c, &quot;In Authoring&quot;))), HYPERLINK(&quot;/apex/Apttus__SendForTeamReview?id=&quot; &amp;Id , IMAGE(&quot;/resource/Apttus__Button_SendToTeamReview&quot;, &quot;Send For Teams Review&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send For Teams Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Source__c</fullName>
        <description>Source of this contract – internal paper or third party contract</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Paper</fullName>
                    <default>true</default>
                    <label>Internal Paper</label>
                </value>
                <value>
                    <fullName>Other Party Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Special_Terms__c</fullName>
        <description>Identifies any special terms related to contract</description>
        <label>Special Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Status_Category__c</fullName>
        <description>The higher level state of the agreement – In Authoring, In Effect, Expired, etc.  These are Apttus reserved values and cannot be changed.</description>
        <label>Status Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>In Authoring</fullName>
                </value>
                <value>
                    <fullName>In Signatures</fullName>
                </value>
                <value>
                    <fullName>In Filing</fullName>
                </value>
                <value>
                    <fullName>In Effect</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>The sub stage of an agreement – the status underneath a given status category.  These are generally modifiable by the customer except for the following values which are Apttus reserved to manage agreement lifecycles:

Request, Submitted Request,
Cancelled Request, In Amendment, Being Amended, Superseded, Activated, Expired, Internal Signatures, Author Contract, Expired, Terminated,  Ready for Signatures, Fully Signed, Signature Declined</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Status_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Request Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted Request</fullName>
                </value>
                <value>
                    <fullName>Approved Request</fullName>
                </value>
                <value>
                    <fullName>Cancelled Request</fullName>
                </value>
                <value>
                    <fullName>In Amendment</fullName>
                </value>
                <value>
                    <fullName>Author Contract</fullName>
                </value>
                <value>
                    <fullName>Language Approval</fullName>
                </value>
                <value>
                    <fullName>Language Approved</fullName>
                </value>
                <value>
                    <fullName>Internal Signatures</fullName>
                </value>
                <value>
                    <fullName>Other Party Signatures</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>Being Renewed</fullName>
                </value>
                <value>
                    <fullName>In Renewal</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Being Terminated</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>In Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>Other Party Review</fullName>
                </value>
                <value>
                    <fullName>Signature Declined</fullName>
                </value>
                <value>
                    <fullName>Ready for Signatures</fullName>
                </value>
                <value>
                    <fullName>Fully Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Submit_Request_Mode__c</fullName>
        <label>Submit Request Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Subtype__c</fullName>
        <description>The subtype of the agreement for a given agreement type</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Term_Months__c</fullName>
        <description>Indicates the duration in months of the contract from the start date</description>
        <label>Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__TerminationComments__c</fullName>
        <description>Termination Comments</description>
        <label>Termination Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Date__c</fullName>
        <description>Date contract terminated</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Notice_Days__c</fullName>
        <description>Notice period prior to termination</description>
        <label>Termination Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Termination_Notice_Issue_Date__c</fullName>
        <description>Date termination notice was sent / received</description>
        <label>Termination Notice Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Total_Contract_Value__c</fullName>
        <description>Total value of agreement</description>
        <label>Total Agreement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__UploadSignedDocument__c</fullName>
        <description>Upload Signed Document button to upload signed document back to the agreement.</description>
        <formula>IF(AND( ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), (ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;) ) ), IF (OR ($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;) , HYPERLINK(&quot;/apex/Apttus__LightningOfflineDocumentImport?action=UploadSignedDocument&amp;id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_UploadSignedDocument&quot;, &quot;Upload Signed Document&quot;),&quot;_self&quot; ) , HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?action=UploadSignedDocument&amp;id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_UploadSignedDocument&quot;, &quot;Upload Signed Document&quot;),&quot;_self&quot;) ) ,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Upload Signed Document button to upload signed document back to the agreement.</inlineHelpText>
        <label>Upload Signed Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionAware__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this agreement is Version aware. This flag enables versioning on all documents of this agreement record, provided document versioning is enabled in custom settings.</description>
        <inlineHelpText>Indicates if this agreement is Version aware. This flag enables versioning on all documents of this agreement record, provided document versioning is enabled in custom settings.</inlineHelpText>
        <label>Version Aware</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Version_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Version__c</fullName>
        <defaultValue>0</defaultValue>
        <description>THIS FIELD IS OBSOLETE.  PLEASE DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <label>Version (OBSOLETE)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Workflow_Trigger_Created_From_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a transient agreement that may get deleted by the user. A new agreement is in transient state until the agreement is explicitly saved by the user. A new agreement is created by new, clone, amend, renew, create offline or create from opportunity methods. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient agreements are created .</description>
        <inlineHelpText>Indicates a transient agreement that may get deleted by the user. A new agreement is in transient state until the agreement is explicitly saved by the user.</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Workflow_Trigger_Viewed_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that gets set by the Generate Agreement scontrol when an agreement is generated.  This flag then becomes the trigger for workflow rules that get fired when the Generate Agreement action is completed.</description>
        <label>Workflow Trigger Generated Agreement</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__FF_Agreement_Number__c</columns>
        <columns>Apttus__Account__c</columns>
        <columns>Apttus__Status_Category__c</columns>
        <columns>Apttus__Status__c</columns>
        <columns>Apttus__Contract_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>APTS_MSA</fullName>
        <active>true</active>
        <label>TRMSA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Apttus__End_Date_Check</fullName>
        <active>true</active>
        <description>Check that either perpetual is checked or end date is filled in when agreement goes into effect</description>
        <errorConditionFormula>AND(
ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),
AND(ISNULL(Apttus__Contract_End_Date__c),NOT(Apttus__Perpetual__c)),
OR(ISNULL(Apttus__Term_Months__c),Apttus__Term_Months__c&lt;=0)
)</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Please enter the Agreement End Date or mark the Agreement as Perpetual prior to executing the agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation</fullName>
        <active>true</active>
        <description>Validate that Term is entered correctly</description>
        <errorConditionFormula>AND( ( Apttus__Perpetual__c ),  (  Apttus__Term_Months__c  ) &gt; 0 )</errorConditionFormula>
        <errorDisplayField>Apttus__Term_Months__c</errorDisplayField>
        <errorMessage>Cannot enter both Perpetual and Term.  Please enter only one of the values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation_2</fullName>
        <active>true</active>
        <description>Validate that Term is entered correctly</description>
        <errorConditionFormula>AND( (Apttus__Perpetual__c ),  NOT(ISNULL(  Apttus__Contract_End_Date__c )) )</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Cannot enter both Perpetual and End Date.  Please enter only one of the values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation_3</fullName>
        <active>false</active>
        <description>Validate that Term is entered correctly (DEPRECATED)</description>
        <errorConditionFormula>AND( (  Apttus__Term_Months__c ) &gt; 0,  NOT(ISNULL(  Apttus__Contract_End_Date__c )) )</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Cannot enter both Term and End Date.  Please enter only one of the values</errorMessage>
    </validationRules>
</CustomObject>